--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "moment": "^2.24.0",
     "performant-array-to-tree": "^1.7.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
