--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "firebase": "^7.13.1",
     "moment": "^2.24.0",
     "performant-array-to-tree": "^1.7.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuexfire": "^3.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
